# ld49

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  lib.rs  main.rs  renderer.rs
src/game/: component.rs  resource.rs
src/game/system/: asteroid_spawner_system.rs  entity_lifetime_system.rs  entity_spinner_system.rs  game_manager_system.rs  mod.rs  particle_spawner_system.rs  player_bounds_enforcer_system.rs  player_collision_system.rs  player_movement_system.rs  render_system.rs  repair_pack_manager_system.rs
src/physics/: aabb.rs  mod.rs
src/renderer/: background_pipeline.rs  mod.rs  pipeline.rs  renderer.rs  sprite_renderer.rs  texture.rs
src/renderer/shader/: background.wgsl  base.wgsl  instanced_sprite.wgsl
src/shader/: base.wgsl
