[package]
name = "ld49"
version = "0.1.0"
authors = ["kehitt <kehitt@users.noreply.github.com>"]
edition = "2018"
resolver = "2"

[dependencies]
env_logger = "0.9.0"
winit = "0.25.0"
wgpu = { version = "0.10.2", features = [ "spirv" ] }
glam = "0.18.0"
pollster = "0.2.4"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
specs = { version = "0.17.0", features = ["specs-derive"] }

[profile.release]
debug = true
